--- a/final-project.html
+++ b/final-project.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@600&display=swap">
-    <link rel="stylesheet" href="/final-project/styles/project-style.css">
+    <link rel="stylesheet" href="project-style.css">
 
 </head>
 
@@ -16,12 +16,12 @@
     <nav>
         <ul id="menu">
 
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/weekly tasks/w01-task.html">W1 Task</a></li>
-            <li><a href="/w03-task.html">W3 Task</a></li>
-            <li><a href="/w04-task.html">W4 Task</a></li>
-            <li><a href="/w05-task.html">W5 Task</a></li>
-            <li><a href="/final-project/final-project.html" class="active">Project</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="weekly tasks/w01-task.html">W1 Task</a></li>
+            <li><a href="w03-task.html">W3 Task</a></li>
+            <li><a href="w04-task.html">W4 Task</a></li>
+            <li><a href="w05-task.html">W5 Task</a></li>
+            <li><a href="final-project.html" class="active">Project</a></li>
         </ul>
     </nav>
 
@@ -29,7 +29,7 @@
         <div id="content">
 
             <picture>
-                <img src="/final-project/images/DAD.png" alt="Dad Joke Logo">
+                <img src="images/DAD.png" alt="Dad Joke Logo">
             </picture>
             <div id="text">
                 <div id="from-api">
