--- a/final-project.html
+++ b/final-project.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@600&display=swap">
-    <link rel="stylesheet" href="project-style.css">
+    <link rel="stylesheet" href="/styles/project-style.css">
 
 </head>
 
