--- a/final-project/html/final-project.html
+++ b/final-project/html/final-project.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@600&display=swap">
-    <link rel="stylesheet" href="/styles/project-style.css">
-
+    <link rel="stylesheet" href="/final-project/styles/project-style.css">
 </head>
 
 <body>
@@ -21,7 +20,7 @@
             <li><a href="w03-task.html">W3 Task</a></li>
             <li><a href="w04-task.html">W4 Task</a></li>
             <li><a href="w05-task.html">W5 Task</a></li>
-            <li><a href="final-project.html" class="active">Project</a></li>
+            <li><a href="/final-project/html/final-project.html" class="active">Project</a></li>
         </ul>
     </nav>
 
@@ -29,7 +28,7 @@
         <div id="content">
 
             <picture>
-                <img src="images/DAD.png" alt="Dad Joke Logo">
+                <img src="/final-project/images/DAD.png" alt="Dad Joke Logo">
             </picture>
             <div id="text">
                 <div id="from-api">
