--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <ul id="menu">
 
       <li><a id="toggleMenu">&equiv;</a></li>
-      <li><a href="/cse121b/index.html" class="active">Home</a></li>
-      <li><a href="/cse121b/weekly tasks/w01-task.html">W1 Task</a></li>
-      <li><a href="/cse121b/w03-task.html">W3 Task</a></li>
-      <li><a href="/cse121b/w04-task.html">W4 Task</a></li>
-      <li><a href="/cse121b/w05-task.html">W5 Task</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="w01-task.html">W1 Task</a></li>
+      <li><a href="w03-task.html">W3 Task</a></li>
+      <li><a href="w04-task.html">W4 Task</a></li>
+      <li><a href="w05-task.html">W5 Task</a></li>
       <li><a href="/final-project/final-project.html">Project</a></li>
     </ul>
   </nav>
