--- a/final-project/index.html
+++ b/final-project/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@600&display=swap">
-    <link rel="stylesheet" href="/final-project/styles/project-style.css">
+    <link rel="stylesheet" href="project-style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <li><a href="/w03-task.html">W3 Task</a></li>
             <li><a href="/w04-task.html">W4 Task</a></li>
             <li><a href="/w05-task.html">W5 Task</a></li>
-            <li><a href="/final-project/index.html" class="active">Project</a></li>
+            <li><a href="index.html" class="active">Project</a></li>
         </ul>
     </nav>
 
@@ -28,7 +28,7 @@
         <div id="content">
 
             <picture>
-                <img src="/final-project/images/DAD.png" alt="Dad Joke Logo">
+                <img src="DAD.png" alt="Dad Joke Logo">
             </picture>
             <div id="text">
                 <div id="from-api">
@@ -61,8 +61,8 @@
     <footer>
         &copy;<span id="year"></span> | final-project | CSE 121b
     </footer>
-    <script src="/final-project/scripts/dad-joke.js" type="module"></script>
-    <script src="/final-project/scripts/get-values.mjs" type="module"></script>
+    <script src="dad-joke.js" type="module"></script>
+    <script src="get-values.mjs" type="module"></script>
 
 </body>
 
