--- a/final-project/index.html
+++ b/final-project/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@600&display=swap">
-    <link rel="stylesheet" href="project-style.css">
+    <link rel="stylesheet" href="styles/project-style.css">
 </head>
 
 <body>
@@ -61,8 +61,8 @@
     <footer>
         &copy;<span id="year"></span> | final-project | CSE 121b
     </footer>
-    <script src="dad-joke.js" type="module"></script>
-    <script src="get-values.mjs" type="module"></script>
+    <script src="scripts/dad-joke.js" type="module"></script>
+    <script src="scripts/get-values.mjs" type="module"></script>
 
 </body>
 
