--- a/final-project/index.html
+++ b/final-project/index.html
@@ -28,7 +28,7 @@
         <div id="content">
 
             <picture>
-                <img src="DAD.png" alt="Dad Joke Logo">
+                <img src="images/DAD.png" alt="Dad Joke Logo">
             </picture>
             <div id="text">
                 <div id="from-api">
